fixed html code to add style and spacing to each journal entry object on the dom to make it look better

--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -58,6 +58,7 @@ label {
 
 #mood {
     font-family: 'Courier New', Courier, monospace;
+    margin-bottom: 
 }
 
 button {
